--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -38,7 +38,7 @@
                 app:cardElevation="6dp">
 
                 <LinearLayout
-                    android:id="@+id/distance"
+                    android:id="@+id/level1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -85,7 +85,7 @@
                 app:cardElevation="6dp">
 
                 <LinearLayout
-                    android:id="@+id/weight"
+                    android:id="@+id/level2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -141,7 +141,7 @@
                 app:cardElevation="6dp">
 
                 <LinearLayout
-                    android:id="@+id/templ"
+                    android:id="@+id/level3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -188,7 +188,7 @@
                 app:cardElevation="6dp">
 
                 <LinearLayout
-                    android:id="@+id/speed"
+                    android:id="@+id/level4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
