--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,31 +8,29 @@
     tools:context=".MainActivity">
 
 
-
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_main"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        app:menu="@menu/nav_items"
         android:background="@color/colorPrimaryDark"
         app:itemIconTint="@color/nav_itemts_color"
         app:itemTextColor="@color/nav_itemts_color"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:menu="@menu/nav_items">
 
     </android.support.design.widget.BottomNavigationView>
 
     <FrameLayout
-        app:layout_constraintBottom_toTopOf="@id/nav_main"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="663dp"
+        app:layout_constraintBottom_toTopOf="@id/nav_main"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="0dp">
 
     </FrameLayout>
 
