--- a/app/src/main/res/layout/custom_english.xml
+++ b/app/src/main/res/layout/custom_english.xml
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
+            android:textColor="#008a77"
             android:text="this here"
-            android:textColor="@android:color/holo_green_dark"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
