--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#00241f</color>
 
     <color name="colorPrimaryDark">#00574B</color>
 
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#003e35</color>
 
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhiteTransparent">#808080</color>
